# fresh-ai-export

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  SECURITY.md
.github/workflows/: windows-release.yml
backend/: backend_launcher.py  pyproject.toml  windows-build-requirements.txt
backend/app/: __init__.py  config.py  desktop.py  export_discovery.py  exporter.py  fields.py  freshdesk.py  lookups.py  main.py  markdown_writer.py  post_filter.py  query.py  rate_limit.py  schemas.py  windows.py  xlsx_writer.py
backend/tests/: test_exporter.py  test_fields.py  test_freshdesk.py  test_lookups.py  test_post_filter.py  test_query.py  test_windows.py
docs/: releasing.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  config.ts  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: FieldGroup.tsx  RateLimit.tsx  Sidebar.tsx  WindowChrome.tsx
frontend/src/lib/: filters.ts
frontend/src/screens/: ConnectStep.tsx  ExportStep.tsx  FiltersStep.tsx  PreviewStep.tsx
scripts/: WebViewPortableLauncher.cs  build.ps1  devtest.ps1
