[project]
name = "freshdesk-local-exporter"
version = "0.1.0"
description = "Local-first Freshdesk ticket exporter"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
]
desktop = [
  "pyinstaller>=6.10.0",
]

[project.scripts]
freshdesk-backend = "app.desktop:main"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["runtime*", "runtime-fast*", "build*", "dist*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-s"

[tool.ruff]
line-length = 100
target-version = "py312"
